# ChangeLog for x11-terms/clusterssh
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-terms/clusterssh/Attic/ChangeLog,v 1.23 2008/09/17 11:40:19 tantive Exp $

  06 Jun 2008; Markus Rothe <corsair@gentoo.org> clusterssh-3.21.ebuild:
  Added ~ppc64; bug #225057

*clusterssh-3.22 (17 Sep 2008)

  17 Sep 2008; Michael Imhof <tantive@gentoo.org> +clusterssh-3.22.ebuild:
  Version bumped. Closes #237449.

  31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  -clusterssh-2.16.ebuild, -clusterssh-2.17.ebuild, -clusterssh-2.20.ebuild,
  -clusterssh-3.17.1.ebuild, -clusterssh-3.18.1.ebuild:
  Clean up.

*clusterssh-3.21 (11 Jan 2008)

  11 Jan 2008; Justin Bronder <jsbronder@gentoo.org>
  +files/clusterssh-3.21-disable-warning.patch,
  +files/clusterssh-3.21-xrm-remove-class.patch, +clusterssh-3.21.ebuild:
  Version bump (Bug 180892).  Add small patches from by tmancill@debian.org.

  29 Jul 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  clusterssh-3.18.1-r1.ebuild:
  ppc stable, bug #186439

  26 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
  clusterssh-3.18.1-r1.ebuild:
  stable x86, bug 186439

  24 Jul 2007; Steve Dibb <beandog@gentoo.org> clusterssh-3.18.1-r1.ebuild:
  amd64 stable, bug 186439

  26 Apr 2007; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  Update for cluster herd split to hp-cluster and ha-cluster.

  21 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

*clusterssh-3.18.1-r1 (27 Aug 2006)

  27 Aug 2006; Michael Imhof <tantive@gentoo.org>
  +clusterssh-3.18.1-r1.ebuild:
  Added missing dependency. Closes #144745.

*clusterssh-3.18.1 (20 Jul 2006)

  20 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  +clusterssh-3.18.1.ebuild:
  (#122950) Bump, removes podchecker and adds postinst note about '-xrm'
  errors (Scott Jones).

  13 Aug 2005; Michael Hanselmann <hansmi@gentoo.org>
  clusterssh-2.20.ebuild:
  Stable on ppc.
