@@ -6,15 +6,17 @@ AUX clusterssh-3.21-xrm-remove-class.patch 941 RMD160 0c97587ecfde51cb37be400c3c
 DIST clusterssh-3.18.1.tar.gz 73910 RMD160 7c2d5ef20024dee62aa6728bd8191349e6535480 SHA1 ecbe0d42126101d5d61c0c69a7ccba342b621744 SHA256 3c98c79617912007c38949c9715a2027954d559ac8c53a166cb9252642d6b523
 DIST clusterssh-3.21.tar.gz 90744 RMD160 fe8cd575c5154f3c95dbd2e0e35eb6959b1d8068 SHA1 707c6874c6aa11fd0d3adf3e07d3a1bed3c06f73 SHA256 17746ed7a3e8854737a117e3f7b4ecc7c104ab1461f96da2828eb31702470288
 DIST clusterssh-3.22.tar.gz 90947 RMD160 73c099872a53a5d8ed993fafe60fc7b7586fd83c SHA1 0927f870459354450f5cdbb4aeaf7ceb12b97f6e SHA256 c774c3f8eee81cffcc46a44758560c46c85c94eb631b11f71e73b65e7086d562
+DIST clusterssh-3.24.tar.gz 91806 RMD160 d78553ce45bbcb5d5db5990d352fbe713414904b SHA1 57d11e41d47643cbb8027090b1e49b02a2dfe8c0 SHA256 d3c7d80f20ade070020e12a53494ac327d7df1d917ceaac995e4845a2951d95b
 EBUILD clusterssh-3.18.1-r1.ebuild 1226 RMD160 65dc207757af6a7f5cb3e32c931eae5724f37df4 SHA1 c6eafbc3af0ccbf47218298877c9207b80f6363c SHA256 e4e4cc0e9977e1f5e29c10c4b2edbff9397d6ced336681428f877ee7cddf0574
 EBUILD clusterssh-3.21.ebuild 1167 RMD160 3f85b94827ccb8a256e399fc014099109449bb50 SHA1 60264e3b7115c9edc971182801294ac30f148ca8 SHA256 c4af1d234e715829527dc64b3d9045469b3eb16fa7a4edc7581b252d3172ffc4
 EBUILD clusterssh-3.22.ebuild 1105 RMD160 ed8cf1e8914d6ed6ff36eeb3a66eaef953edc159 SHA1 95dcacd8b41792ba675b0f3133c6642dc052f25a SHA256 eddef6bc62d39c80a0211c4d6f936b783ea8207540fb7370b9344cd24dedc146
-MISC ChangeLog 3407 RMD160 f49b4aed91b97ff00e94a1a17c4de3c0d59dc028 SHA1 b1593566ef3570c1e37bc03dbd85b154bf13ecb4 SHA256 b1519b9de7ed7e30b19fb143aae9c585c3ebd17d440b47ca5db2c7ea8d4e0527
+EBUILD clusterssh-3.24.ebuild 1004 RMD160 c6746e91a65ab94a75f6757cd37df4792aef063b SHA1 5946ba979acfaf09c732f32ccafad571f7db803e SHA256 0598f56768bf692c6e70fe3f159d628363611aa19705aa4b411f3bf6fdf50f71
+MISC ChangeLog 3691 RMD160 8a52bea15218707527ca4720601f503cea6700df SHA1 8a147b646a876905fa6ed4d2aa3c379a5eaf7b57 SHA256 4ad5fcb932cd55f00089c9843656d6b132d7312691bd2809be51810c4abdf67e
 MISC metadata.xml 315 RMD160 12fe02dce4baa2046922f5865314c98555bd4132 SHA1 14bfa132c839c12f26e4ac1106227d2303c69e43 SHA256 d95f6835d819d4bf1bb74ac46c8259d1db23b0cfb8cd49a2a436b601f8953bd5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkjQ7OEACgkQKtJO8LeSoouEYwCfSw/MFwY6/B+9RtefjFF+x/3B
-9L4An0wrOiGIB6UvduvSXgx7kXG3FuhX
-=p6Md
+iEYEARECAAYFAklvne0ACgkQKtJO8LeSootwlQCfWWRKAOAk4QU3dylCPB6MNjRP
+Ly0Ani4OooRKnmT1xTyB2H+jSB8sXhLv
+=j/F3
 -----END PGP SIGNATURE-----
